--- a/QM_TemplatePackage.csproj
+++ b/QM_TemplatePackage.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <PackageType>Template</PackageType>
-    <PackageVersion>1.1.3</PackageVersion>
+    <PackageVersion>1.1.4</PackageVersion>
     <PackageId>NBK_RedSpy.QM_Template.Template</PackageId>
     <Title>Quasimorph Template</Title>
     <Authors>NBK_RedSpy</Authors>
