--- a/template/src/QM_Template.csproj
+++ b/template/src/QM_Template.csproj
@@ -62,6 +62,14 @@
 		<PackageFolder>$(ProjectDir)../package/</PackageFolder>
 
 	</PropertyGroup>
+	<Target Name="CleanArtifacts" AfterTargets="PostBuildEvent">
+		<ItemGroup>
+			<ArtifactFiles Include="$(TargetDir)AsmResolver.*" />
+			<ArtifactFiles Include="$(TargetDir)BepInEx.AssemblyPublicizer.*" />
+		</ItemGroup>
+		<Message Text="Deleting Build Artifacts from BepInEx Publicizer"/>
+		<Delete Files="@(ArtifactFiles)" />
+	</Target>
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
 		<Exec Command="@echo off&#xD;&#xA;set deployDir=&quot;$(WorkshopPath)&quot;&#xD;&#xA;&#xD;&#xA;xcopy /f /y &quot;../modmanifest.json&quot; &quot;$(TargetDir)&quot;&#xD;&#xA;&#xD;&#xA;if '$(SteamId)'=='' (echo SteamId in project not set.  Aborting Workshop Deployment &amp;&amp; exit)&#xD;&#xA;echo deploying to %25deployDir%25&#xD;&#xA;&#xD;&#xA;mkdir &quot;$(WorkshopPath)&quot;&#xD;&#xA;&#xD;&#xA;xcopy /f /y &quot;$(ProjectDir)../media/thumbnail.png&quot; %25deployDir%25&#xD;&#xA;xcopy /f /y &quot;$(ProjectDir)../modmanifest.json&quot; %25deployDir%25&#xD;&#xA;&#xD;&#xA;&#xD;&#xA;xcopy /f /y   &quot;$(TargetDir)$(TargetName).*&quot; %25deployDir%25&#xD;&#xA;xcopy /f /y   &quot;$(TargetDir)0Harmony.dll&quot; %25deployDir%25&#xD;&#xA;&#xD;&#xA;xcopy /f /y &quot;C:\Windows\Microsoft.NET\Framework64\v4.0.30319\System.Data.dll&quot; %25deployDir%25&#xD;&#xA;xcopy /f /y &quot;C:\Windows\Microsoft.NET\Framework64\v4.0.30319\System.Runtime.Serialization.dll&quot; %25deployDir%25&#xD;&#xA;xcopy /f /y  &quot;$(TargetDir)Newtonsoft.Json.dll&quot; %25deployDir%25&#xD;&#xA;" />
 		<ItemGroup>
